--- a/views/components/navbar.ejs
+++ b/views/components/navbar.ejs
@@ -1,5 +1,5 @@
 <!-- Navbar -->
-<nav class="shadow sticky top-0 bg-white z-50">
+<nav class="shadow-sm sticky top-0 bg-white z-50">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
         <div class="relative flex items-center justify-between h-16">
             <div class="absolute inset-y-0 right-0 flex items-center sm:hidden" id="burger">
@@ -24,7 +24,7 @@
             </div>
             <div class="flex-1 flex items-center sm:items-stretch justify-start">
                 <a href="/">
-                    <img class="block h-8 w-auto" src="/img/logo.svg" alt="Logo">
+                    <img class="block h-10 w-auto" src="/img/logo.svg" alt="Logo">
                 </a>
                 <div class="hidden sm:block sm:ml-6">
                     <div class="flex space-x-4">
@@ -37,7 +37,7 @@
                 <a href="/signin"
                     class="text-neutral-600 hover:text-neutral-800 px-3 py-2 rounded-md text-sm font-medium mr-2"
                     aria-current="signin">Sign In</a>
-                <a href="/signin" class="bg-neutral-800 text-white px-3 py-2 rounded-md text-sm font-medium ml-2"
+                <a href="/signup" class="bg-neutral-800 text-white px-3 py-2 rounded-md text-sm font-normal ml-2"
                     aria-current="signin">Get Started</a>
             </div>
         </div>
@@ -61,7 +61,6 @@
             <a href="/signup"
                 class="hover:bg-blue-600 hover:text-white px-3 py-2 rounded-md text-base font-medium block"
                 aria-current="signup">Sign Up</a>
-
         </div>
     </div>
 </nav>
