--- a/views/components/newurl.ejs
+++ b/views/components/newurl.ejs
@@ -1,72 +1,26 @@
 <div class="py-12">
     <div class="h-gutter py-4">
-        <div class="bg-neutral-50 grid grid-cols-1 sm:grid-flow-col sm:grid-cols-2 lg:grid-cols-3 gap-2">
-            <form id="myForm" class="px-4 py-6 space-y-6 h-fit">
-                <div class="relative pb-12">
-                    <h1 class="-rotate-3 font-extrabold text-4xl text-gray-400 block font-comforter">Your url, your
-                        way:)</h1>
-                    <h1 class="-rotate-3 absolute font-black text-5xl text-violet-600 block font-comforter">Shorten
-                        link</h1>
-                    <h1 class="px-0.5 py-0.5 -rotate-3 absolute font-semibold text-5xl text-white block font-comforter">
-                        Shorten link</h1>
-                    <h1 class="px-0.5 py-0.5 -rotate-3 absolute font-thin text-5xl text-pink-600 block font-comforter">
-                        Shorten link</h1>
-                </div>
-                <div>
-                    <label for="longUrl" class="text-sm font-medium text-neutral-500 py-1 block">Enter the long
-                        url</label>
+        <div class="bg-neutral-50 py-6">
+
+            <form id="myForm" class="px-6 py-6 h-fit">
+                <label for="longUrl" class="pl-2 text-sm font-medium text-neutral-500 py-1 block">Enter your long
+                    URL here</label>
+                <div class="relative">
+                    <label for="longUrl" class="sr-only">Your long link goes here</label>
                     <input type="url" name="longUrl" required id="longUrl" placeholder="https://example.com"
-                        class="text-sm font-medium text-neutral-600 appearance-none rounded-md relative block w-full px-3 py-2 border border-neutral-200 focus:outline-none focus:ring-neutral-50 focus:border-neutral-300 sm:text-sm placeholder:text-sm placeholder:font-medium placeholder:text-neutral-400">
-                </div>
-
-                <div id="shortUrlDiv" class="hidden">
-                    <label for="shortUrl" class="text-sm text-gray-600 py-1 block">Shortend url</label>
-                    <input type="text" id="shortUrl" value="Short url will go here..." disabled
-                        class="bg-emerald-600 py2 appearance-none rounded-md relative block w-full px-3 py-2 border border-gray-200 sm:text-sm text-sm text-white">
-                    <div class="my-4">
-                        <span onclick="copy()" id="copyicon"
-                            class=" shadow border p-2 rounded-md group hover:border-gray-200 hover:border-b-2 hover:border-r-2"><i
-                                class="fas fa-copy font-semibold text-xl text-gray-400 group-hover:text-gray-500"></i></span>
-                        <span id="copydoneicon"
-                            class="hidden shadow border p-2 rounded-md group hover:border-gray-200 hover:border-b-2 hover:border-r-2"><i
-                                class="fas fa-check-circle font-semibold text-xl text-green-600"></i></span>
-                        <span
-                            class=" shadow border p-2 rounded-md group hover:border-gray-200 hover:border-b-2 hover:border-r-2"><i
-                                class="fas fa-paper-plane font-semibold text-xl text-gray-400 group-hover:text-gray-500"></i></span>
-                        <span
-                            class=" shadow border p-2 rounded-md group hover:border-gray-200 hover:border-b-2 hover:border-r-2"><i
-                                class="fas fa-external-link-alt font-semibold text-xl text-gray-400 group-hover:text-gray-500"></i></span>
-                        <span
-                            class=" shadow border p-2 rounded-md group hover:border-gray-200 hover:border-b-2 hover:border-r-2"><i
-                                class="fas fa-envelope font-semibold text-xl text-gray-400 group-hover:text-gray-500"></i></span>
-                        <span
-                            class=" shadow border p-2 rounded-md group hover:border-gray-200 hover:border-b-2 hover:border-r-2"><i
-                                class="fas fa-qrcode font-semibold text-xl text-gray-400 group-hover:text-gray-500"></i></span>
-                        <span
-                            class=" shadow border p-2 rounded-md group hover:border-gray-200 hover:border-b-2 hover:border-r-2"><i
-                                class="fas fa-ellipsis-v font-semibold text-xl text-gray-400 group-hover:text-gray-500"></i></span>
-                    </div>
-                </div>
-
-                <button type="submit"
-                    class="border-2 text-sm rounded-md block w-full py-2 px-4 border-transparent text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">Generate
-                    Link
-                </button>
-
-                <div>
-                    <h1 class="text-sm text-gray-400">By continuing you agree to <a class="text-indigo-400">terms &
-                            policies</a></h1>
+                        class="bg-white text-sm font-medium text-neutral-600 appearance-none rounded-md relative w-full pl-3 pr-20 py-3 border border-neutral-200 focus:outline-none focus:ring-neutral-50 focus:border-neutral-300 sm:text-sm placeholder:text-sm placeholder:font-medium placeholder:text-neutral-400">
+                    <button type="submit"
+                        class="absolute inset-y-1 right-1 px-4 text-sm rounded-md border-transparent text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+                        Generate
+                    </button>
                 </div>
             </form>
-            <!-- url data element -->
-            <div id="recent-url-container"
-                class="sm:col-span-1 lg:col-span-2 bg-white px-4 hidden sm:block overflow-y-scroll max-h-96">
-                <div class="px-6 py-3">
-                    <h1 class="text-4xl font-semibold text-stone-400 text-center font-comforter">Your recent urls</h1>
-                </div>
+
+            <div id="recent-url-container" class="rounded-md mx-6 relative hidden overflow-hidden">
                 <div id="recent-urls"></div>
+                <a href="#" id="seeMoreLink"
+                    class="absolute bottom-4 right-4 text-indigo-600 text-sm hover:underline cursor-pointer">See All</a>
             </div>
-            <!-- data element ends -->
         </div>
     </div>
 </div>
