--- a/views/components/signup.ejs
+++ b/views/components/signup.ejs
@@ -5,12 +5,6 @@
             <h2 class="text-center text-3xl font-extrabold text-gray-900">
                 Create account
             </h2>
-            <p class="mt-2 text-center text-sm text-gray-600">
-                Or
-                <a href="#" class="font-medium text-indigo-600 hover:text-indigo-500">
-                    start your 14-day free trial
-                </a>
-            </p>
         </div>
         <form class="space-y-6" action="/signup" method="POST">
             <input type="hidden" name="remember" value="true">
@@ -52,16 +46,6 @@
             <div>
                 <button type="submit"
                     class="group relative w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
-                    <span class="absolute left-0 inset-y-0 flex items-center pl-3">
-                        <!-- Heroicon name: solid/lock-closed -->
-                        <svg class="h-5 w-5 text-indigo-500 group-hover:text-indigo-400"
-                            xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"
-                            aria-hidden="true">
-                            <path fill-rule="evenodd"
-                                d="M5 9V7a5 5 0 0110 0v2a2 2 0 012 2v5a2 2 0 01-2 2H5a2 2 0 01-2-2v-5a2 2 0 012-2zm8-2v2H7V7a3 3 0 016 0z"
-                                clip-rule="evenodd" />
-                        </svg>
-                    </span>
                     Sign Up
                 </button>
             </div>
@@ -77,9 +61,9 @@
         <!-- social logins -->
         <div class="">
             <a href="/auth/google">
-                <button class="border-2 rounded-md w-full py-2 px-3 group hover:bg-stone-600">
-                    <i class="fab fa-google text-sm text-gray-600 group-hover:text-white px-1"></i>
-                    <span class="font-medium text-sm text-neutral-600 group-hover:text-white px-1">Continue with
+                <button class="border-2 rounded-md w-full py-2 px-3 group hover:border-neutral-300">
+                    <i class="fab fa-google text-sm text-gray-600 px-1"></i>
+                    <span class="font-medium text-sm text-neutral-600 px-1">Continue with
                         Google</span>
                 </button>
             </a>
